--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@vueuse/core": "^14.0.0",
     "axios": "^1.13.2",
     "nuxt": "^4.2.1",
+    "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
