--- a/package.json
+++ b/package.json
@@ -12,14 +12,27 @@
   "dependencies": {
     "@nuxt/content": "^3.8.2",
     "@pinia/nuxt": "^0.11.3",
+    "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^14.0.0",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.554.0",
     "nuxt": "^4.2.1",
     "pinia": "^3.0.4",
+    "reka-ui": "^2.6.0",
+    "shadcn-nuxt": "2.3.3",
+    "tailwind-merge": "^3.4.0",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
   "overrides": {
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "7.0.0-beta.1",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   }
 }
