--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "7.0.0-beta.1",
+    "json-server": "1.0.0-beta.3",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
